--- a/monitoring/kiali-helmrelease.yaml
+++ b/monitoring/kiali-helmrelease.yaml
@@ -16,9 +16,7 @@ spec:
         namespace: flux-system
   values:
     auth:
-      strategy: login
-      username: admin
-      password: 123456
+      strategy: anonymous
     deployment:
       ingress_enabled: true
       ingress_class_name: ""
