--- a/monitoring/kiali-helmrelease.yaml
+++ b/monitoring/kiali-helmrelease.yaml
@@ -14,20 +14,4 @@ spec:
         kind: HelmRepository
         name: kiali
         namespace: flux-system
-  values:
-    auth:
-      strategy: anonymous
-    deployment:
-      ingress_enabled: true
-      ingress_class_name: ""
-      ingress_hosts:
-        - kiali.local
-      ingress_tls:
-        - secretName: kiali-tls
-          hosts:
-            - kiali.local
-    external_services:
-      prometheus:
-        url: "http://kube-prometheus-stack-prometheus.monitoring:9090"
-      grafana:
-        url: "http://kube-prometheus-stack-grafana.monitoring:80"
+  values: {}
