--- a/sonarqube/kustomization.yaml
+++ b/sonarqube/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - flux-system
-  - monitoring/
-  - sonarqube/
+  - namespace.yaml
+  - helmrepository.yaml
+  - helmrelease.yaml
