--- a/sonarqube/helmrelease.yaml
+++ b/sonarqube/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       version: "10.5.0+691"
       sourceRef:
         kind: HelmRepository
-        name: sonarqube
+        name: sonarqube-repo
         namespace: flux-system
   values:
     ingress:
