--- a/sonarqube/helmrelease.yaml
+++ b/sonarqube/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: sonarqube
-      version: "10.5.0+691"
+      version: "2025.3.0"
       sourceRef:
         kind: HelmRepository
         name: sonarqube-repo
