--- a/monitoring/helmrelease.yaml
+++ b/monitoring/helmrelease.yaml
@@ -16,10 +16,9 @@ spec:
         namespace: flux-system
   values:
     grafana:
-      # hardcodeamos aquí el usuario y la contraseña
+      enabled: true
       adminUser: "admin"
       adminPassword: "123456"
-      # eliminamos cualquier referencia a Secret externo
       existingSecret: ""
       service:
         type: ClusterIP
@@ -37,7 +36,6 @@ spec:
             gnetId: 315
             revision: 4
             datasource: Prometheus
-
     prometheus:
       service:
         type: ClusterIP
